--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "궁합 계산용 nodejs 라이브러리",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "babel src --out-dir lib"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/TintypeMolly/gunghap.js",
   "dependencies": {
     "hangul-js": "^0.2.2"
+  },
+  "devDependencies": {
+    "babel-preset-latest": "^6.16.0"
   }
 }
