--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-preset-latest": "^6.16.0",
-    "mocha": "^3.1.2"
+    "babel-preset-env": "^1.7.0",
+    "mocha": "^5.2.0"
   }
 }
